Adiciona meta tags Open Graph e Twitter (banner preview)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eagle Agência: Marketing Digital para Turismo em Alter do Chão</title>
+    <!-- Open Graph / Social preview -->
+    <meta name="description" content="Marketing digital e social media para hotéis, pousadas e ONGs em Alter do Chão. Aumente sua visibilidade com a Eagle." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Eagle Agência Digital" />
+    <meta property="og:site_name" content="Eagle Agência Digital" />
+    <meta property="og:description" content="Marketing digital e social media para hotéis, pousadas e ONGs em Alter do Chão. Aumente sua visibilidade com a Eagle." />
+    <meta property="og:url" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/" />
+    <meta property="og:image" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/assets/banner.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eagle Agência Digital" />
+    <meta name="twitter:description" content="Marketing digital e social media para hotéis, pousadas e ONGs em Alter do Chão." />
+    <meta name="twitter:image" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/assets/banner.png" />
+    <link rel="image_src" href="https://eusoumanoelnetto.github.io/eagle-agencia-digital/assets/banner.png" />
     
     <!-- Preconnect para recursos externos -->
     <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin>
