--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eagle Agência: Marketing Digital para Turismo em Alter do Chão</title>
+    
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eagleagencia.com.br/" />
+    <meta property="og:title" content="Eagle Agência: Marketing Digital para Turismo em Alter do Chão" />
+    <meta property="og:description" content="Mostramos a tua pousada, hotel ou restaurante de um jeito que dá vontade de arrumar as malas e vir correndo pra Alter do Chão" />
+    <meta property="og:image" content="/assets/banner.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://eagleagencia.com.br/" />
+    <meta property="twitter:title" content="Eagle Agência: Marketing Digital para Turismo em Alter do Chão" />
+    <meta property="twitter:description" content="Mostramos a tua pousada, hotel ou restaurante de um jeito que dá vontade de arrumar as malas e vir correndo pra Alter do Chão" />
+    <meta property="twitter:image" content="/assets/banner.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
