--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/turismo/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eagle Agência: Marketing Digital para Turismo em Alter do Chão</title>
     
@@ -102,7 +102,7 @@
         background: #d4b274;
       }
     </style>
-    <script type="module" crossorigin src="/turismo/assets/app.js"></script>
+    <script type="module" crossorigin src="/assets/app.js"></script>
   </head>
   <body class="bg-brand-light dark:bg-brand-dark">
     <div id="root"></div>
