--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/" />
     <meta property="og:title" content="Eagle Agência: Marketing Digital para Turismo em Alter do Chão" />
     <meta property="og:description" content="Mostramos a tua pousada, hotel ou restaurante de um jeito que dá vontade de arrumar as malas e vir correndo pra Alter do Chão" />
-    <meta property="og:image" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/assets/banner.png" />
+    <meta property="og:image" content="https://eusoumanoelnetto.github.io/Eagle-Agencia-Turismo/assets/banner.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     
@@ -21,7 +21,7 @@
     <meta property="twitter:url" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/" />
     <meta property="twitter:title" content="Eagle Agência: Marketing Digital para Turismo em Alter do Chão" />
     <meta property="twitter:description" content="Mostramos a tua pousada, hotel ou restaurante de um jeito que dá vontade de arrumar as malas e vir correndo pra Alter do Chão" />
-    <meta property="twitter:image" content="https://eusoumanoelnetto.github.io/eagle-agencia-digital/assets/banner.png" />
+    <meta property="twitter:image" content="https://eusoumanoelnetto.github.io/Eagle-Agencia-Turismo/assets/banner.webp" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
